--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <!doctype html>
 
-유익하고 즐거운 모든것이 모두에게
+<html>
+  <head>
+    <meata charset='utf-8'>
+      <title>HTML 기본구조</title>
+      </head>
+    <body>
+      안녕하세요 반갑습니다.
+    </body>
+    </html>
