--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <html>
   <head>
     <meata charset='utf-8'>
+      <style>
+        body {
+          font- size : 20px;
+          color : red;
+        }
       <title>HTML 기본구조</title>
       </head>
     <body>
