--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
           font- size : 20px;
           color : red;
         }
+      </style>
       <title>HTML 기본구조</title>
       </head>
     <body>
