--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
       </head>
     <body>
       안녕하세요 반갑습니다. 연습중
-      <h1>
-              <style>
-        body {
-          font- size : 20px;
-          color : red;
-        }
-      </style>title 1
+      <h1>title 1
       </h1>
       <h2>title 2</h2>
       
