--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <body>
       안녕하세요 반갑습니다. 연습중
       <h1>title 1
+              <style>
+        body {
+          font- size : 20px;
+          color : red;
+        }
+      </style>
       </h1>
       <h2>title 2</h2>
       
